[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "retoolrpc"
version = "0.1.2"
description = "Python package for Retool RPC"
authors = ["tryretool <developer-api@retool.com>", "Guilherme Scaranse <guiscaranse@gmail.com>"]
license = "MIT"
repository = "https://github.com/tryretool/retoolrpc"
homepage = "https://retool.com"
readme = "README.md"

[[tool.poetry.packages]]
include = "retoolrpc"

[tool.black]
preview = true

[tool.ruff]
src = ["retoolrpc"]

[tool.poetry.dependencies]
python = "^3.11"
orjson = "^3.10.0"
pydantic = "^2.11.7"
typer = "^0.12.0"
httpx = "^0.27.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.0.292"
pytest = "^7.4.2"